# CLIPS-GUI

./: CLIPS-GUI.pro  README  TODO  adddeffactsdialog.cpp  adddeffactsdialog.ui  addfactbytemplatedialog.cpp  addfactbytemplatedialog.h  addfunctiondialog.cpp  addfunctiondialog.h  addfunctiondialog.ui  addglobalsdialog.cpp  addglobalsdialog.h  addglobalsdialog.ui  addruledialog.h  addtemplatedialog.ui  clipsclass.cpp  clipsclass.h  clipsmmclass.cpp  clipsmmclass.h  consoleclass.cpp  consoleclass.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newprojectdialog.cpp  newprojectdialog.ui  projectstackedwidget.cpp  projectstackedwidget.h  resources.qrc
clips/: Makefile.am  Makefile.in  README_CLIPS_LINUX  aclocal.m4  clips-6.pc.in  config.h.in  configure  configure.ac
clips/clips/: Makefile.am  Makefile.in  agenda.h  analysis.h  argacces.h  bload.h  bmathfun.h  bsave.h  classcom.h  classfun.h  classinf.h  classini.h  clips-config.h  clips-config.h.in  clips.h  clsltpsr.h  cmptblty.h  conscomp.h  constrct.h  constrnt.h  crstrtgy.h  cstrcbin.h  cstrccom.h  cstrcpsr.h  cstrnbin.h  cstrnchk.h  cstrncmp.h  cstrnops.h  cstrnpsr.h  cstrnutl.h  default.h  defins.h  dffctbin.h  dffctbsc.h  dffctdef.h  dffnxbin.h  dffnxcmp.h  dffnxexe.h  dffnxfun.h  dfinsbin.h  (+103 more)
clips/documentation/: Makefile.am  Makefile.in  clips-init.el  clips-mode.el  get-html-docs.sh  get-pdf-docs.sh  inf-clips.el
clips/x_window_system/: Makefile.am  Makefile.in
clips/x_window_system/color/: Makefile.am  Makefile.in
clips/x_window_system/xinterface/: Makefile.am  Makefile.in  xclips.desktop  xmenu_wind.c
src/: clipsclass.cpp  clipsclass.h  consoleclass.cpp  consoleclass.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectstackedwidget.cpp  projectstackedwidget.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addclassdialog.cpp  addclassdialog.h  addclassdialog.ui  adddeffactsdialog.h  addfactbytemplatedialog.ui  addfunctiondialog.ui  addinstancedialog.cpp  addinstancedialog.h  addinstancedialog.ui  addmessagehandlerdialog.cpp  addmessagehandlerdialog.h  addmessagehandlerdialog.ui  addmoduledialog.cpp  addmoduledialog.h  addmoduledialog.ui  addruledialog.cpp  addruledialog.ui  addtemplatedialog.cpp  addtemplatedialog.h  newprojectdialog.h  newprojectdialog.ui
translations/: CLIPS-GUI_ru.qm  CLIPS-GUI_ru.ts
